--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Toggle Nav OUTSIDE the container -->
   <div id="togglenavs">
     <ul>
-      <li><a href="./index.php">Home</a></li>
+      <li><a href="./index.html">Home</a></li>
       <li><a href="./Pages/dealers.html">Dealers</a></li>
       <li><a href="./Pages/catalouge.html">Car Catalogue</a></li>
       <li><a href="./Pages/Contact us.html">Contact Us</a></li>
